--- a/css/hover.css
+++ b/css/hover.css
@@ -3,12 +3,7 @@ background-color: none;
 }
 
 table.ho1 td:hover {
-  background-color: #494949;
- /* border-top-left-radius: 20%;
-  border-top-right-radius: 20%;
-  border-bottom-right-radius: 20%;
-  border-bottom-left-radius: 20%;*/
-  /*-webkit-border-radius: 10px 10px 10px 10px;*/
+  background-color: rgba(73,73,73,.3);
   border-width: 2px 4px;
   border-radius: 40px;
 }
@@ -17,7 +12,7 @@ background-color: none;
 }
 
 nav.honav li:hover {
-  background-color: #494949;
+  background-color: rgba(73,73,73,.3);
   border-top-left-radius: 20%;
   border-top-right-radius: 20%;
 }
